--- a/src/css/chat.css
+++ b/src/css/chat.css
@@ -1,13 +1,18 @@
 /* ChatUI.css */
-  .chat-container {
-    border: 1px solid #f1f1f162;
+
+  .chat-layout{
+    border: 1px solid #d9d9d9;
+    height: inherit;
+    box-sizing: border-box;
+    border-radius: 6px;
   }
 
   .chat-content {
     background-color: white;
     padding: 16px;
     overflow-y: auto;
-    height: calc(70vh - 54px); /* 입력창 높이만큼 제외한 높이 */
+    height: inherit;
+    /* height: calc(70vh - 54px); 입력창 높이만큼 제외한 높이 */
   }
   
   .message-bubble {
@@ -15,8 +20,9 @@
     padding: 8px 12px;
     border-radius: 12px;
     word-break: break-word;
+    min-width: 80px;
   }
-  
+
   .right {
     background-color: #108ee9;
     color: white;
@@ -29,14 +35,97 @@
 
   .chat-input-container {
     display: flex;
-    padding: 8px;
     /* position: fixed; */
     bottom: 0;
     width: 100%;
     background-color: white;
+    margin-top: 10px;
   }
 
   .send-button {
     height: 54px;
     width: 100%;
+  }
+
+  /* loader */
+
+  .loader:before{
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: -25px;
+    height: 12px;
+    width: 12px;
+    border-radius: 12px;
+    -webkit-animation: loader10g 3s ease-in-out infinite;
+        animation: loader10g 3s ease-in-out infinite;
+  }
+  
+  .loader{
+    margin: 8px 0 8px 0;
+    position: relative;
+    width: 12px;
+    height: 12px;
+    top: 46%;
+    left: 46%;
+    border-radius: 12px;
+    -webkit-animation: loader10m 3s ease-in-out infinite;
+        animation: loader10m 3s ease-in-out infinite;
+  }
+  
+  
+  .loader:after{
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: 25px;
+    height: 10px;
+    width: 10px;
+    border-radius: 10px;
+    -webkit-animation: loader10d 3s ease-in-out infinite;
+        animation: loader10d 3s ease-in-out infinite;
+  }
+  @-webkit-keyframes loader10g{
+    0%{background-color: rgba(255, 255, 255, .2);}
+    25%{background-color: rgba(22, 119, 255, .3);}
+    50%{background-color: rgba(255, 255, 255, .2);}
+    75%{background-color: rgba(255, 255, 255, .2);}
+    100%{background-color: rgba(255, 255, 255, .2);}
+  }
+  @keyframes loader10g{
+    0%{background-color: rgba(255, 255, 255, .2);}
+    25%{background-color: rgba(22, 119, 255, .3);}
+    50%{background-color: rgba(255, 255, 255, .2);}
+    75%{background-color: rgba(255, 255, 255, .2);}
+    100%{background-color: rgba(255, 255, 255, .2);}
+  }
+  
+  @-webkit-keyframes loader10m{
+    0%{background-color: rgba(255, 255, 255, .2);}
+    25%{background-color: rgba(255, 255, 255, .2);}
+    50%{background-color: rgba(22, 119, 255, .3);}
+    75%{background-color: rgba(255, 255, 255, .2);}
+    100%{background-color: rgba(255, 255, 255, .2);}
+  }
+  @keyframes loader10m{
+    0%{background-color: rgba(255, 255, 255, .2);}
+    25%{background-color: rgba(255, 255, 255, .2);}
+    50%{background-color: rgba(22, 119, 255, .3);}
+    75%{background-color: rgba(255, 255, 255, .2);}
+    100%{background-color: rgba(255, 255, 255, .2);}
+  }
+  
+  @-webkit-keyframes loader10d{
+    0%{background-color: rgba(255, 255, 255, .2);}
+    25%{background-color: rgba(255, 255, 255, .2);}
+    50%{background-color: rgba(255, 255, 255, .2);}
+    75%{background-color: rgba(22, 119, 255, .3);}
+    100%{background-color: rgba(255, 255, 255, .2);}
+  }
+  @keyframes loader10d{
+    0%{background-color: rgba(255, 255, 255, .2);}
+    25%{background-color: rgba(255, 255, 255, .2);}
+    50%{background-color: rgba(255, 255, 255, .2);}
+    75%{background-color: rgba(22, 119, 255, .3);}
+    100%{background-color: rgba(255, 255, 255, .2);}
   }
